Finally succeeded to set animation on mouseMove on the projects. Made so much time to fix it and too much time because I forgot to precise var() on the CSS file... Still have the No overload matches this call. issue withe handleMouseMove function but it works will have to find a solution for that this evening. Also converted the rest of the images

--- a/styles/2.Utils/_functions.scss
+++ b/styles/2.Utils/_functions.scss
@@ -4,7 +4,7 @@
 }
 
 @function counterLiDelay($i) {
-    $delay: 0.2s + ($i * 0.2s);
+    $delay: 0.3s + ($i * 0.15s);
     @return $delay;
 }
 
