--- a/styles/3.Components/_project.scss
+++ b/styles/3.Components/_project.scss
@@ -1,9 +1,10 @@
 .project {
     position: relative;
-
+    transition: 0.3s ease-out;
     gap: 15px;
     overflow: hidden;
     height: calc(((100vw - 415px) / 3));
+    box-shadow: 1px 1px 1px 1px rgba($color: #000000, $alpha: 0.5);
     img {
         position: absolute;
         z-index: -1;
@@ -11,18 +12,11 @@
         top: -10%;
         width: 120%;
         height: 120%;
+        // transform: translate(--img-trans-x, --img-trans-y);
     }
-    &-content {
-        position: relative;
-        height: 100%;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-evenly;
-        // gap: 25px;
-        transition: 0.3s ease-in;
-        &:hover {
+    &:hover {
+        transform: scale(0.95);
+        .project-content {
             background-color: rgba($clr-1, 0.5);
             backdrop-filter: blur(3px);
             h3 {
@@ -35,13 +29,24 @@
                 animation: increaseOpacity 0.1s ease-in forwards;
             }
         }
+    }
+    &-content {
+        position: relative;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        // gap: 25px;
+        transition: 0.3s ease-in;
         h3 {
             text-align: center;
             font-size: $small-title;
             font-weight: 900;
             color: $third-color;
             transition: 0.3s ease-in;
-            transform: translateY(-250px);
+            transform: translateY(-150px);
         }
         ul {
             width: 45%;
@@ -74,8 +79,29 @@
             text-transform: uppercase;
             font-weight: 900;
             color: $first-color;
-            transform: translateY(250px);
+            transform: translateY(150px);
             transition: 0.4s ease-out;
         }
     }
+}
+#illuprojet-1 {
+    transform: translate(var(--img1-trans-x), var(--img1-trans-y));
+}
+#illuprojet-2 {
+    transform: translate(var(--img2-trans-x), var(--img2-trans-y));
+}
+#illuprojet-3 {
+    transform: translate(var(--img3-trans-x), var(--img3-trans-y));
+}
+#illuprojet-4 {
+    transform: translate(var(--img4-trans-x), var(--img4-trans-y));
+}
+#illuprojet-5 {
+    transform: translate(var(--img5-trans-x), var(--img5-trans-y));
+}
+#illuprojet-6 {
+    transform: translate(var(--img6-trans-x), var(--img6-trans-y));
+}
+#illuprojet-7 {
+    transform: translate(var(--img7-trans-x), var(--img7-trans-y));
 }
